updated styling to match what's on the wireframe

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         body {
             margin: 0;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            background-color: rgb(211, 225, 241);
         }
     </style>
 </head>
